--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,2 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@600&display=swap');
 @import './Basic.scss';
-@import 'Lists.scss'
+@import './Details.scss';
+@import './AddSongSinger.scss'
