added delete endpoint to singers and songs and delete buttons to singers and songs components

--- a/client/src/styles/Style.scss
+++ b/client/src/styles/Style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@600&display=swap');
-@import './Basic.scss';
+@import './Main.scss';
 @import './Details.scss';
-@import './AddSongSinger.scss'
+@import './SingerSong.scss';
+@import './query.scss'
