--- a/client/src/styles/query.scss
+++ b/client/src/styles/query.scss
@@ -1,6 +1,6 @@
-@media(max-width: 899px) {
-  .main {
-    flex-direction: column;
-    align-items: center;
-  }
-}
+// @media(max-width: 899px) {
+//   .main {
+//     flex-direction: column;
+//     align-items: center;
+//   }
+// }
