--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -1,32 +1,24 @@
 body {
-  background-color: #914f8a;
+  background-color: #EA738DFF;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
   h1 {
+    text-align: center;
     margin-top: 2rem;
-    text-align: center;
-    color: black;
     font-family: 'Bitter', serif;
-    text-shadow: 2px 2px 0 #f3f1f1, 4px 4px 0 #9c9c9c;
-  }
-
-  .main {
-    display: flex;
-    text-align: center;
-    justify-content: space-around;
-    width: 100%;
+    text-shadow: 2px 2px 0 #89ABE3FF, 4px 4px 0 white;
   }
 }
 
-.Button {
-  border: none;
-  width: fit-content;
-  margin: 0 auto;
-  background-color: #5d7d9b;
-  border-radius: 6px;
-  padding: .3rem;
-  margin-top: .5rem;
-  margin-bottom: 3rem;
-  color: black;
-  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.5);
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    text-align: center;
+    margin-top: 2rem;
+    font-family: 'Bitter', serif;
+    text-shadow: 2px 2px 0 #89ABE3FF, 4px 4px 0 white;
+  }
 }
