added background image and more styles

--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -1,24 +1,26 @@
 body {
-  background-color: #89ABE3FF;
+  background: url(../musica-para-treinar-scaled.jpg) center / cover no-repeat;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  height: 100vh;
 
   h1 {
     text-align: center;
     margin-top: 2rem;
     font-family: 'Bitter', serif;
-    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 white;
+    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
   }
 }
 
 .main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  // flex-direction: column;
+  // align-items: center;
 
   h2 {
     text-align: center;
     margin-top: 2rem;
     font-family: 'Bitter', serif;
-    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 white;
+    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
   }
 }
