--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -4,23 +4,23 @@ body {
   color: white;
   height: 100vh;
 
-  h1 {
-    text-align: center;
-    margin-top: 2rem;
-    font-family: 'Bitter', serif;
-    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
-  }
+  // h1 {
+  //   text-align: center;
+  //   margin-top: 2rem;
+  //   font-family: 'Bitter', serif;
+  //   text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
+  // }
 }
 
-.main {
-  display: flex;
-  // flex-direction: column;
-  // align-items: center;
+// .main {
+//   display: flex;
+//   // flex-direction: column;
+//   // align-items: center;
 
-  h2 {
-    text-align: center;
-    margin-top: 2rem;
-    font-family: 'Bitter', serif;
-    text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
-  }
-}
+//   h2 {
+//     text-align: center;
+//     margin-top: 2rem;
+//     font-family: 'Bitter', serif;
+//     text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
+//   }
+// }
