--- a/client/src/styles/_Details.scss
+++ b/client/src/styles/_Details.scss
@@ -1,11 +1,17 @@
 .details {
   margin-top: 1rem;
   color: #ea738d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .detailsUl {
-    li {
+    display: flex;
+    flex-direction: column;
 
+    li {
       border-bottom: solid 1px #ea738d;
+      width: fit-content;
     }
   }
 
