moved delete singer/band to the singer details component and made as a modal and changed the style

--- a/client/src/styles/Style.scss
+++ b/client/src/styles/Style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@600&display=swap');
 @import './_Main.scss';
-@import './_Details.scss';
-@import './_SingerSong.scss';
 @import './_navigation.scss';
+@import './_SingersList.scss';
+@import './_SingerDetails.scss';
