--- a/client/src/styles/_navigation.scss
+++ b/client/src/styles/_navigation.scss
@@ -1,12 +1,10 @@
 .navbar {
-  background-color: #00fffb;
+  background-color: #fa57c1;
   width: 100%;
   display: flex;
   justify-content: space-between;
-
+  position: fixed;
   h1 {
-    // text-align: center;
-    // margin-top: 2rem;
     margin-left: 1rem;
     font-family: 'Bitter', serif;
     text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #ea738d61;
@@ -16,8 +14,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 10%;
-    // border: solid 1px yellow;
-    width: 70%;
+    width: 50%;
   }
 }
 
@@ -37,5 +34,6 @@
 }
 
 .navlink:hover {
-  color: #ea738d;
+  color: white;
+  border-bottom: solid 1px white;
 }
