--- a/client/src/styles/_Main.scss
+++ b/client/src/styles/_Main.scss
@@ -1,26 +1,7 @@
 body {
-  background: url(../musica-para-treinar-scaled.jpg) center / cover no-repeat;
+  background-color: #7572ff;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
-  height: 100vh;
+  height: 100%;
 
-  // h1 {
-  //   text-align: center;
-  //   margin-top: 2rem;
-  //   font-family: 'Bitter', serif;
-  //   text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
-  // }
 }
-
-// .main {
-//   display: flex;
-//   // flex-direction: column;
-//   // align-items: center;
-
-//   h2 {
-//     text-align: center;
-//     margin-top: 2rem;
-//     font-family: 'Bitter', serif;
-//     text-shadow: 2px 2px 0 #EA738DFF, 4px 4px 0 #00fffb;
-//   }
-// }
