styled the add component styles and fixed delete bug

--- a/client/src/styles/Style.scss
+++ b/client/src/styles/Style.scss
@@ -3,3 +3,6 @@
 @import './_navigation.scss';
 @import './_SingersList.scss';
 @import './_SingerDetails.scss';
+@import './_SongsList.scss';
+@import './SongDetails.scss';
+@import './_AddModal.scss';
