--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -3,3 +3,6 @@
 @import './_navigation.scss';
 @import './_SingersList.scss';
 @import './_SingerDetails.scss';
+@import './_SongsList.scss';
+@import './SongDetails.scss';
+@import './_AddModal.scss';
